--- a/params/fix_estimation.yaml
+++ b/params/fix_estimation.yaml
@@ -5,8 +5,8 @@ pub_topic: "/ada/gps_odometry"
 # topic name to publish gps projected points odometry to 
 pp_pub_topic: "/ada/gps_pp_odometry"
 
-# gps odometry parent frame id name 
-frame_id: "utm"
+# gps data parent frame id name 
+frame_id: "map"
 
-# gps odometry child frame id name
+# gps data child frame id name
 child_frame_id: "ada/rear_wheel_axis"
