removed path service

--- a/params/fix_estimation.yaml
+++ b/params/fix_estimation.yaml
@@ -1,4 +1,7 @@
 
+# topic name that has the path msg
+path_topic: "route_points"
+
 # topic name to publish the gps odometry to
 pub_topic: "/ada/gps_odometry"
 
