--- a/params/odom_estimation.yaml
+++ b/params/odom_estimation.yaml
@@ -1,4 +1,7 @@
 
+# topic name that has the path msg
+path_topic: "route_points"
+
 # topic name that has the odometry to be matched
 pub_topic: "/ada/odometry_fusion_ekf"
 
